# personal

./: .gitignore  Cargo.toml  GITHUB_CLONE_USAGE.md
.github/workflows/: deploy.yml
examples/: clone_repo.rs
scripts/: optimize-images.sh
src/: data.rs  db.rs  error.rs  lib.rs  main.rs  repo_utils.rs  seo.rs  views.rs
src/http/: handlers.rs  middleware.rs  mod.rs  state.rs
static/: style.css
templates/: index.html  post.html  posts_list.html
tests/: database_impl_tests.rs  post_creation_test.rs
tests/data/posts/: 00_example.md
tmp/: views.tsv
